deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: start-hack-ws
spec:
  selector: { app: start-hack-ws }
  ports:
    - { name: http, port: 80, targetPort: http }
